fix: add the missing checks

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,6 +184,14 @@
     "  comparison_num = 0\n",
     "\n",
     "  for weight in item_weights:\n",
+    "    comparison_num += 1\n",
+    "\n",
+    "    if len(distribution) > 0 and distribution[-1][\"load\"] + weight <= container_capacity:\n",
+    "      distribution[-1][\"items\"].append(weight)\n",
+    "      distribution[-1][\"load\"] += weight\n",
+    "\n",
+    "      continue\n",
+    "\n",
     "    container_found = False\n",
     "    \n",
     "    for container in distribution:\n",
@@ -209,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,8 +231,7 @@
     "  comparison_num = 0\n",
     "\n",
     "  for weight in item_weights:\n",
-    "    container_with_min_load_index = -1\n",
-    "    min_load = container_capacity + 1\n",
+    "    comparison_num += 1\n",
     "\n",
     "    if len(distribution) > 0 and distribution[-1][\"load\"] + weight <= container_capacity:\n",
     "      distribution[-1][\"items\"].append(weight)\n",
@@ -232,7 +239,8 @@
     "\n",
     "      continue\n",
     "\n",
-    "    comparison_num += 1\n",
+    "    container_with_min_load_index = -1\n",
+    "    min_load = container_capacity + 1\n",
     "\n",
     "    for i, container in enumerate(distribution):\n",
     "      comparison_num += 2\n",
@@ -263,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,8 +285,7 @@
     "  comparison_num = 0\n",
     "\n",
     "  for weight in item_weights:\n",
-    "    container_with_max_load_index = -1\n",
-    "    max_load = -1\n",
+    "    comparison_num += 1\n",
     "\n",
     "    if len(distribution) > 0 and distribution[-1][\"load\"] + weight <= container_capacity:\n",
     "      distribution[-1][\"items\"].append(weight)\n",
@@ -286,7 +293,8 @@
     "\n",
     "      continue\n",
     "\n",
-    "    comparison_num += 1\n",
+    "    container_with_max_load_index = -1\n",
+    "    max_load = -1\n",
     "\n",
     "    for i, container in enumerate(distribution):\n",
     "      comparison_num += 2\n",
@@ -317,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -471,23 +479,54 @@
       "(Row #1) Result:\n",
       "                Next Fit  First Fit  Best Fit  Worst Fit  Min Containers Num\n",
       "Containers Num        13         13        13         13                  10\n",
-      "Comparison Num        20         90       169        169                  10 \n",
+      "Comparison Num        20         98       176        176                  10 \n",
       "\n",
       "(Row #2) Result:\n",
       "                Next Fit  First Fit  Best Fit  Worst Fit  Min Containers Num\n",
       "Containers Num        13         12        12         12                  11\n",
-      "Comparison Num        20        109       190        190                  11 \n",
+      "Comparison Num        20        104       196        196                  11 \n",
       "\n",
       "(Row #3) Result:\n",
       "                Next Fit  First Fit  Best Fit  Worst Fit  Min Containers Num\n",
       "Containers Num        13         12        12         12                  11\n",
-      "Comparison Num        20        111       182        182                  11 \n",
+      "Comparison Num        20         97       188        188                  11 \n",
       "\n"
      ]
     }
    ],
    "source": [
     "solve(\"data/original.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Row #1) Result:\n",
+      "                Next Fit  First Fit  Best Fit  Worst Fit  Min Containers Num\n",
+      "Containers Num        14         14        14         14                  10\n",
+      "Comparison Num        86        177       268        268                  10 \n",
+      "\n",
+      "(Row #2) Result:\n",
+      "                Next Fit  First Fit  Best Fit  Worst Fit  Min Containers Num\n",
+      "Containers Num        15         15        15         15                  11\n",
+      "Comparison Num        83        188       293        293                  11 \n",
+      "\n",
+      "(Row #3) Result:\n",
+      "                Next Fit  First Fit  Best Fit  Worst Fit  Min Containers Num\n",
+      "Containers Num        14         14        14         14                  11\n",
+      "Comparison Num        84        175       266        266                  11 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "solve(\"data/original.csv\", should_sort=True)"
    ]
   },
   {
@@ -501,24 +540,24 @@
      "text": [
       "(Row #1) Result:\n",
       "                Next Fit  First Fit  Best Fit  Worst Fit  Min Containers Num\n",
-      "Containers Num        14         14        14         14                  10\n",
-      "Comparison Num        86        163       262        262                  10 \n",
+      "Containers Num        14         13        13         13                  10\n",
+      "Comparison Num        85        172       397        397                  10 \n",
       "\n",
       "(Row #2) Result:\n",
       "                Next Fit  First Fit  Best Fit  Worst Fit  Min Containers Num\n",
-      "Containers Num        15         15        15         15                  11\n",
-      "Comparison Num        83        176       288        288                  11 \n",
+      "Containers Num        15         12        12         12                  11\n",
+      "Comparison Num        83        198       383        383                  11 \n",
       "\n",
       "(Row #3) Result:\n",
       "                Next Fit  First Fit  Best Fit  Worst Fit  Min Containers Num\n",
-      "Containers Num        14         14        14         14                  11\n",
-      "Comparison Num        84        165       260        260                  11 \n",
+      "Containers Num        14         12        11         11                  11\n",
+      "Comparison Num        85        180       371        371                  11 \n",
       "\n"
      ]
     }
    ],
    "source": [
-    "solve(\"data/original.csv\", should_sort=True)"
+    "solve(\"data/original.csv\", should_sort=True, is_ascending=False)"
    ]
   },
   {
@@ -532,24 +571,14 @@
      "text": [
       "(Row #1) Result:\n",
       "                Next Fit  First Fit  Best Fit  Worst Fit  Min Containers Num\n",
-      "Containers Num        14         13        13         13                  10\n",
-      "Comparison Num        85        167       396        396                  10 \n",
-      "\n",
-      "(Row #2) Result:\n",
-      "                Next Fit  First Fit  Best Fit  Worst Fit  Min Containers Num\n",
-      "Containers Num        15         12        12         12                  11\n",
-      "Comparison Num        83        189       382        382                  11 \n",
-      "\n",
-      "(Row #3) Result:\n",
-      "                Next Fit  First Fit  Best Fit  Worst Fit  Min Containers Num\n",
-      "Containers Num        14         12        11         11                  11\n",
-      "Comparison Num        85        186       370        370                  11 \n",
+      "Containers Num        39         35        34         34                  32\n",
+      "Comparison Num        60        795      1724       1724                  32 \n",
       "\n"
      ]
     }
    ],
    "source": [
-    "solve(\"data/original.csv\", should_sort=True, is_ascending=False)"
+    "solve(\"data/original-long.csv\")"
    ]
   },
   {
@@ -563,14 +592,14 @@
      "text": [
       "(Row #1) Result:\n",
       "                Next Fit  First Fit  Best Fit  Worst Fit  Min Containers Num\n",
-      "Containers Num        39         35        34         34                  32\n",
-      "Comparison Num        60        870      1709       1709                  32 \n",
+      "Containers Num        41         41        41         41                  32\n",
+      "Comparison Num       340       1160      1980       1980                  32 \n",
       "\n"
      ]
     }
    ],
    "source": [
-    "solve(\"data/original-long.csv\")"
+    "solve(\"data/original-long.csv\", should_sort=True)"
    ]
   },
   {
@@ -584,29 +613,8 @@
      "text": [
       "(Row #1) Result:\n",
       "                Next Fit  First Fit  Best Fit  Worst Fit  Min Containers Num\n",
-      "Containers Num        41         41        41         41                  32\n",
-      "Comparison Num       340       1154      1961       1961                  32 \n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "solve(\"data/original-long.csv\", should_sort=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(Row #1) Result:\n",
-      "                Next Fit  First Fit  Best Fit  Worst Fit  Min Containers Num\n",
       "Containers Num        41         35        34         34                  32\n",
-      "Comparison Num       338       1292      3159       3159                  32 \n",
+      "Comparison Num       338       1282      3160       3160                  32 \n",
       "\n"
      ]
     }
@@ -632,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
